--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@ body {
 .crossed {
   text-decoration: line-through 2px red;
   background-color: #f0f0f0;
+  -webkit-text-decoration-line: line-through;
+  -webkit-text-decoration-color: red;
+  -webkit-text-decoration-thickness: 2px;
 }
 ul, li {
   list-style-type: none;
